20059
{code:scala}
> console
[info] Starting scala interpreter...
Welcome to Scala 2.12.0-M4 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_77).
Type in expressions for evaluation. Or try :help.

scala> import java.util.stream.Collectors
import java.util.stream.Collectors

scala> import scala.collection.JavaConverters._
import scala.collection.JavaConverters._

scala> 1.to(10).asJava.stream().map(_ + 1).collect(Collectors.toList[Int])
<console>:26: error: type mismatch;
 found   : java.util.stream.Collector[Int,?0(in value res0),java.util.List[Int]] where type ?0(in value res0)
 required: java.util.stream.Collector[_ >: ?0(in value x$1), ?, ?]
Note: Int <: Any, but Java-defined trait Collector is invariant in type T.
You may wish to investigate a wildcard type such as `_ <: Any`. (SLS 3.2.10)
       1.to(10).asJava.stream().map(_ + 1).collect(Collectors.toList[Int])
                                                                    ^
{code}
